--- a/pages/fight/index.wxml
+++ b/pages/fight/index.wxml
@@ -30,35 +30,37 @@
             </view>
         </view>
         <view class="topic-box pt15 b-sizing df flexCol">
-            <view class="type pr">
-                <view class="text ac b-sizing">{{questionType=='0'?"单选":"多选"}}</view>
-                <image wx:if="{{questionType=='1'}}" class="double pa" src="../../assets/images/fight/double.png" />
+            <view class="type pr df">
+                <view class="text ac b-sizing">{{currentQuestion.questionTypeName}}</view>
+                <image wx:if="{{currentQuestion.questionType=='3'}}" class="double pa" src="../../assets/images/fight/double.png" />
+                <view class="type">{{currentQuestion.questionCategoryName}}</view>
             </view>
             <view class="topic b-sizing">
-                <view class="subject">{{questionIndex+1}}.{{subject}}</view>
+                <view class="subject">{{currentQuestion.num}}.{{currentQuestion.questionDesc}}</view>
                 <view class="answer-list">
                     <view class="answer-box animation al-center justBet" 
                         style="animation-delay:.{{index * 2}}s" 
-                        wx:for="{{answerList}}" 
+                        wx:for="{{currentQuestion.options}}" 
                         wx:key="index"
                     >
                         <view class="me player">
-                            <image src="{{meInfo.header}}"></image>
+                            <image wx:if="{{userAnswerResult.indexOf(item.key)>=0}}" src="{{meInfo.avatarUrl}}"></image>
                         </view>
-                        <view class="answer b-sizing al-center justBet" bindtap="submitAnswer" data-id="{{index}}">
-                            <view class="text">{{item.answer}}</view>
+                        <view class="answer b-sizing al-center justBet" bindtap="submitAnswer" data-id="{{item.key}}">
+                            <view class="text">{{item.value}}</view>
                             <view class="status">
+                                <text class="iconfont icon-zhengque"></text>
                                 <text class="iconfont icon-zhengque"></text>
                             </view>
                         </view>
                         <view class="rival player">
-                            <image src="{{rivalInfo.header}}"></image>
+                            <image wx:if="{{rivalInfo.indexOf(item.key)>=0}}" src="{{rivalInfo.header}}"></image> rivalAnswerResult
                         </view>
                     </view>
                 </view>
             </view>
             <view class="topic-footer">
-                <button hidden="{{questionType=='0'}}" type="primary" class="sub" bindtap="doubleSub">提交</button>
+                <button hidden="{{currentQuestion.questionType!='3'}}" type="primary" class="sub" bindtap="doubleSub">提交</button>
             </view>
         </view>
     </view>
