匹配答题交互

--- a/pages/fight/index.less
+++ b/pages/fight/index.less
@@ -196,6 +196,14 @@
                                     font-size: 46rpx;
                                 }
                             }
+                            &.active,&active.right {
+                                background: #46d7b6;
+                                color: #ffffff;
+                            }
+                            &.error {
+                                background: #de5a68;
+                                color: #ffffff;
+                            }
                         }
                     }
                     &.active {
