--- a/pages/fight/index.wxml
+++ b/pages/fight/index.wxml
@@ -38,23 +38,31 @@
             <view class="topic b-sizing">
                 <view class="subject">{{currentQuestion.num}}.{{currentQuestion.questionDesc}}</view>
                 <view class="answer-list">
-                    <view class="answer-box animation al-center justBet" 
+                    <view class="answer-box animation" 
                         style="animation-delay:.{{index * 2}}s" 
                         wx:for="{{currentQuestion.options}}" 
                         wx:key="index"
                     >
-                        <view class="me player">
-                            <image wx:if="{{userAnswerResult.indexOf(item.key)>=0}}" src="{{meInfo.avatarUrl}}"></image>
-                        </view>
-                        <view class="answer b-sizing al-center justBet" bindtap="submitAnswer" data-id="{{item.key}}">
-                            <view class="text">{{item.value}}</view>
-                            <view class="status">
-                                <text class="iconfont icon-zhengque"></text>
-                                <text class="iconfont icon-zhengque"></text>
+                        <view 
+                            wx:if="{{(isShowRightAnswer&&(item.meActive||item.isRight||item.rivalActive)||!isShowRightAnswer)}}" 
+                            class="answer-item al-center justBet"
+                        >
+                            <view class="me player">
+                                <image wx:if="{{item.meActive}}" src="{{meInfo.avatarUrl}}" alt="{{item.key}}"></image>
                             </view>
-                        </view>
-                        <view class="rival player">
-                            <image wx:if="{{rivalInfo.indexOf(item.key)>=0}}" src="{{rivalInfo.header}}"></image> rivalAnswerResult
+                            <view
+                                class="{{(isShowRightAnswer?item.className:item.meActive?'active':'')+' answer b-sizing al-center justBet'}}" 
+                                bindtap="submitAnswer" data-id="{{index}}"
+                            >
+                                <view class="text">{{item.value}}</view>
+                                <view wx:if="{{isShowRightAnswer&&(item.meActive||item.isRight)}}" class="status">
+                                    <text wx:if="{{item.isRight&&item.meActive}}" class="iconfont icon-zhengque"></text>
+                                    <text wx:else class="iconfont icon-cuohao"></text>
+                                </view>
+                            </view>
+                            <view class="rival player">
+                                <image wx:if="{{item.rivalActive}}" src="{{rivalInfo.header}}"></image> 
+                            </view>
                         </view>
                     </view>
                 </view>
