联调匹配答题

--- a/pages/fight/index.less
+++ b/pages/fight/index.less
@@ -155,7 +155,7 @@
                 .double {
                     width: 235rpx;
                     height: 87rpx;
-                    bottom: 46rpx;
+                    bottom: 70rpx;
                     left: 40rpx;
                 }
             }
@@ -186,6 +186,8 @@
                         .answer {
                             flex: 1;
                             padding: 20rpx 30rpx;
+                            height: 86rpx;
+                            line-height: 46rpx;
                             border-radius: 16rpx;
                             background: #f5f3f6;
                             .text {
@@ -196,7 +198,7 @@
                                     font-size: 46rpx;
                                 }
                             }
-                            &.active,&active.right {
+                            &.active,&.right {
                                 background: #46d7b6;
                                 color: #ffffff;
                             }
