--- a/pages/fight_result/index.wxml
+++ b/pages/fight_result/index.wxml
@@ -5,32 +5,32 @@
             <view class="header">
                 <image src="{{meInfo.avatarUrl}}"></image>
                 <view 
-                    wx:if="{{meInfo.score>rivalInfo.score}}" 
+                    wx:if="{{fightResut.homeScore>fightResut.awayScore}}"
                     class="crown pa animated fadeInDown ac"
                 >
                     <image src="../../assets/images/fight_result/crown.png"></image>
                 </view>
             </view>
-            <view class="name">{{meInfo.nickName}}</view>
-            <view class="score fw600">{{meInfo.score}}分</view>
-            <view class="{{(meInfo.score>=rivalInfo.score?'':'error')+' integral fw600'}}">{{meInfo.score>=rivalInfo.score?'+1':'-1'}}积分</view>
+            <view class="name">{{meInfo.nickName||'我'}}</view>
+            <view class="score fw600">{{fightResut.homeScore}}分</view>
+            <view class="{{(fightResut.homeScore>=rivalInfo.awayScore?'':'error')+' integral fw600'}}">{{fightResut.homeResult}}</view>
         </view>
         <view class="vs">
             <image src="../../assets/images/fight_result/vs_res.png"></image>
         </view>
         <view class="rival pr">
             <view class="header">
-                <image src="{{rivalInfo.header}}"></image>
+                <image src="{{fightResut.awayHeader}}"></image>
                 <view 
-                    wx:if="{{meInfo.score<rivalInfo.score}}" 
+                    wx:if="{{fightResut.homeScore<fightResut.awayScore}}" 
                     class="crown pa animated fadeInDown"
                 >
                     <image src="../../assets/images/fight_result/crown.png"></image>
                 </view>
             </view>
-            <view class="name">{{rivalInfo.name}}</view>
-            <view class="score fw600">{{rivalInfo.score}}分</view>
-            <view class="{{(meInfo.score<=rivalInfo.score?'':'error')+' integral fw600'}}">{{meInfo.score<=rivalInfo.score?'+1':'-1'}}积分</view>
+            <view class="name">{{fightResut.awayName||"--"}}</view>
+            <view class="score fw600">{{fightResut.awayScore}}分</view>
+            <view class="{{(meInfo.homeScore<=fightResut.awayScore?'':'error')+' integral fw600'}}">{{fightResut.awayResult}}</view>
         </view>
         <view wx:if="{{plate}}" class="plate pa animated fadeInDown">
             <image src="{{plate}}"></image>
