--- a/pages/honor/index.wxml
+++ b/pages/honor/index.wxml
@@ -3,8 +3,12 @@
         <image class="title" src="../../assets/images/honor/ry.png" mode="aspectFit|aspectFill|widthFix" lazy-load="false" />
     </view>
     <view class="medal-box">
-        <view class="medal-item" wx:for="{{medalList}}" wx:key="index">
+        <view class="medal-item" wx:for="{{medalList}}" wx:key="index" bindtap="open">
             <image src="/assets/images/honor/group-1.png"></image>
         </view>
+    </view>
+    <view class="showImg" wx:if="{{showVisible}}">
+        <image class="content" src="/assets/images/honor/group-1.png"></image>
+        <image bindtap="close" class="close" src="/assets/images/icon/close.png"></image>
     </view>
 </view>
