--- a/pages/honor/index.wxss
+++ b/pages/honor/index.wxss
@@ -17,19 +17,46 @@
 }
 .honor .medal-box {
   flex: 1;
+  height: 0;
   display: flex;
   padding: 30rpx;
   overflow-y: auto;
   justify-content: space-between; 
   flex-wrap: wrap;
+  align-content: flex-start;
 }
 
 .medal-item{
   width: 200rpx;
   height: 280rpx;
+  margin-bottom: 30rpx;
 }
 .medal-item image {
   width: 100%;
   height: 100%;
 }
+.showImg{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, .3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.showImg .content {
+  width: 600rpx;
+  height: 840rpx;
+}
+.showImg .close {
+  width: 40rpx;
+  height: 40rpx;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-480rpx);
+  right: 40rpx;
+}
+
 
