增加分享逻辑

--- a/pages/adminIndex/adminIndex.wxml
+++ b/pages/adminIndex/adminIndex.wxml
@@ -16,12 +16,12 @@
           </text>
           <text>赛制规则</text>
       </view>
-      <view class="bottom-fun_result">
-          <text class="bottom-fun_icon">
-            <text class="iconfont icon-fenxiang"></text>
-          </text>
-          <text>分享</text>
-      </view>
+      <button class="bottom-fun_result" open-type="share">
+        <text class="bottom-fun_icon">
+          <text class="iconfont icon-fenxiang"></text>
+        </text>
+        <text>分享</text>
+      </button>
   </view>
 </view>
 <view class="modal" hidden="{{!rulesBox}}">
