--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -185,7 +185,12 @@ page {
   justify-content: space-between;
 }
 .bottom-fun_result {
+  width: auto!important;
+  background: transparent;
+  margin: 0!important;
   font-size: 28rpx;
+  font-weight: 400;
+  padding: 0;
   color: #46d7b6;
   line-height: 35rpx;
 }
