--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -5,18 +5,26 @@
     <view class="login-header__title">执法大练兵知识竞赛</view>
   </view>
   <view class="login-content">
-    <view class="login-content__tips">完善信息</view>
-      <picker mode="region" bindchange="bindRegionChange" value="{{params.region}}" >
-        <view class="login-content__item">
-            <view class="login-content__icon iconfont icon-icon_dizhi">
-            </view>
-            <view class="login-content__input">
-              <text class="login-content__input__placeholder" wx:if="{{params.region.length !== 3}}">所属省份</text>
-              <text wx:else>{{params.region}}</text> 
-            </view>
-            <view class="login-content__rightIcon">></view>
-        </view>
-      </picker>
+  <view class="login-content__tips">完善信息</view>
+  <picker 
+    header-text='选择所属省份'
+    mode="multiSelector" 
+    bindchange="bindMultiPickerChange" 
+    bindcolumnchange="bindMultiPickerColumnChange" 
+    range-key="name"
+    value="{{citysIndex}}" 
+    range="{{cityArray}}">
+    <view class="login-content__item">
+      <view class="login-content__icon iconfont icon-icon_dizhi">
+      </view>
+      <view class="login-content__input">
+        <text class="login-content__input__placeholder" wx:if="{{params.region.length !== 3}}">所属省份</text>
+        <text wx:else>{{region}}</text> 
+      </view>
+      <view class="login-content__rightIcon">></view>
+    </view>
+  </picker>
+
     <view class="login-content__item">
       <view class="login-content__icon iconfont icon-yonghu">
       </view>
@@ -66,6 +74,8 @@
     <button class="login-save" bindtap="handleSubmit">提交</button>
   </view>
   <dialog-tips wx:if="{{tipsDialogVisible}}" catch:ok='handleFix'></dialog-tips>
+  
+  
 </view>
 
 
