--- a/pages/fight/index.wxml
+++ b/pages/fight/index.wxml
@@ -83,7 +83,7 @@
                 </view>
             </view>
             <view class="start" wx:if="{{!isMatch}}">
-                <button type="primary" class="start-btn match-btn" bindtap="startMatch">开始匹配</button>
+                <button type="primary" disabled="{{!connectSocket}}" class="start-btn match-btn" bindtap="startMatch">开始匹配</button>
             </view>
             <view class="stata" wx:else>
                 <view class="vs fw900">
