排行榜调整

--- a/pages/ranking/ranking.wxml
+++ b/pages/ranking/ranking.wxml
@@ -29,16 +29,16 @@
       </view>
     </view>
   </view>
-  <view class="page__content" style="margin-top: 100rpx" hidden="{{checkedType !== '1'}}">
+  <view class="page__content" style="margin-top: 100rpx" wx:if="{{checkedType == '1'}}">
     <ranking-table cloumn="{{personClomn}}" data="{{personData}}"></ranking-table>
   </view>
-  <view class="page__content" hidden="{{checkedType !== '2'}}">
+  <view class="page__content" wx:if="{{checkedType == '2'}}">
     <ranking-table cloumn="{{personClomn}}" data="{{personData}}"></ranking-table>
   </view>
-  <view class="page__content" hidden="{{checkedType !== '3'}}">
+  <view class="page__content" wx:if="{{checkedType == '3'}}">
     <ranking-table cloumn="{{personClomn}}" data="{{personData}}"></ranking-table>
   </view>
-  <view class="page__content" hidden="{{checkedType !== '4'}}">
+  <view class="page__content" wx:if="{{checkedType == '4'}}">
     <ranking-table cloumn="{{personClomn}}" data="{{personData}}"></ranking-table>
   </view>
 </view>
