--- a/pages/shareImg/shareImg.wxss
+++ b/pages/shareImg/shareImg.wxss
@@ -63,6 +63,9 @@
   font-size: 30rpx;
   line-height: 90rpx;
 }
+.saveBtn .iconfont {
+    color: #46d7b6!important;
+}
 .saveBtn button {
   width: 100%;
 }
